--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,7 +1,15 @@
 @import './../scss/global.scss';
 
+// * {
+//   outline: 1px solid red;
+// }
+
 .app {
   background-color: $mainColor;
+  max-width: 1440px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
   width: 100%;
   height: 100vh;
 }
