--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -10,10 +10,16 @@ html {
 
 .app {
   background-color: $mainColor;
-  max-width: 1440px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  width: 100%;
   height: 100vh;
+  // position: sticky;
+  // bottom: 0;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
