--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,13 +2,24 @@
 
 .header {
   width: 100%;
-  max-height: 26px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 30px;
-  box-sizing: border-box;
+  padding: 30px 0;
+  z-index: 2;
+  // position: sticky;
+  // top: 0;
+
+  &__content {
+    @include blockWidth;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+  }
   &__logo {
     color: $mainTextColor;
     font-size: 30px;
@@ -16,7 +27,8 @@
     font-weight: 400;
     line-height: 30px; /* 100% */
     text-transform: uppercase;
-    display: flex;align-items: center;
+    display: flex;
+    align-items: center;
   }
 
   &__nav {
@@ -29,8 +41,9 @@
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px; 
+    line-height: 24px;
     text-transform: uppercase;
-    display: flex;align-items: center;
+    display: flex;
+    align-items: center;
   }
 }
