--- a/src/components/RecentProject/RecentProject.scss
+++ b/src/components/RecentProject/RecentProject.scss
@@ -1,31 +1,24 @@
 @import './../../scss/global.scss';
 
 .recent-project {
-  width: 100%;
+  @include contentWidth;
   margin: 100px auto;
   &__title {
+    @include sectionTitle;
     color: $titleTextColor;
     margin: 0 auto 20px;
-    font-size: 70px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 70px; /* 99.739% */
-    letter-spacing: 3px;
-    max-width: 1016px;
-    width: 100%;
   }
 }
 
 .swiper {
-  max-width: 1100px;
-  width: 100%;
-  height: 100%;
+  //   max-width: 1100px;
+  //   width: 100%;
+  //   height: 100%;
   // var(--swiper-pagination-color) = $mainTextColor;
   // --swiper-pagination-bullet-inactive-color: #999999;
   // --swiper-pagination-bullet-inactive-opacity: 1;
   --swiper-pagination-bullet-size: 16px;
   --swiper-pagination-bullet-horizontal-gap: 6px;
-//   background-color: $mainColor;
 
   & .swiper-button-prev {
     color: $mainTextColor;
