--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -15,4 +15,7 @@
   font-weight: 400;
   line-height: 70px; /* 99.739% */
   letter-spacing: 3px;
+  color: $titleTextColor;
+  margin: 0 auto 20px;
+  white-space: wrap;
 }
