--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -4,10 +4,11 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  max-height: 300px;
+  min-height: 300px;
   gap: 20px;
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
+
   &:nth-of-type(even) {
     flex-direction: row-reverse;
   }
@@ -17,8 +18,8 @@
   }
 
   &__img {
-    max-width: 450px;
-    width: 100%;
+    min-width: 450px;
+    height: 300px;
     background-size: contain;
   }
 
@@ -28,16 +29,18 @@
     gap: 20px;
     color: $footerColor;
   }
+
   &__title {
     margin: 0;
     font-size: 32px;
     line-height: 32px;
     font-weight: 600;
-}
-&__description {
-      margin: 0;
-      font-size: 20px;
-      line-height: 22px;
-      font-weight: normal;
+  }
+
+  &__description {
+    margin: 0;
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: normal;
   }
 }
