--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import './scss/global.scss';
 
 body {
-  background-color: $mainColor;
+  background-color: $mainBGColor;
   margin: 0;
   font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
