--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,11 +2,12 @@
 
 .footer {
   min-height: 300px;
-  background-color: $footerColor;
+  background-color: $secondBGColor;
+
   &__content {
     @include contentWidth;
-    padding: 50px 0;
-    box-sizing: border-box;
+    margin: 50px auto;
+    min-height: 200px;
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -16,7 +17,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
     width: 100%;
 
     &:last-of-type {
@@ -30,14 +30,14 @@
     line-height: 24px;
     font-weight: normal;
     margin: 0;
-    color: $mainColor;
+    color: $secondTextColor;
   }
   &__copyright {
     font-size: 18px;
     line-height: 18px;
     font-weight: normal;
     margin: 0;
-    color: $mainColor;
+    color: $secondTextColor;
   }
   &__contacts {
     display: flex;
@@ -50,15 +50,22 @@
     line-height: 20px;
     font-weight: normal;
     margin: 0;
-    color: $mainColor;
+    color: $secondTextColor;
     text-align: right;
   }
 
   &__contact {
-    color: $mainColor;
+    color: $secondTextColor;
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 10px;
+
+    & svg {
+      width: 24px;
+      height: 24px;
+      fill: currentColor;
+    }
 
     &-text {
       font-size: 22px;
@@ -71,10 +78,98 @@
   &__social-media {
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 20px;
   }
 
   &__link {
-    color: $mainColor;
+    color: $secondTextColor;
+    & svg {
+      width: 24px;
+      height: 24px;
+      fill: currentColor;
+    }
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .footer {
+    min-height: 280px;
+
+    &__content {
+      margin: 40px auto;
+    }
+
+    &__title {
+      font-size: 22px;
+      line-height: 22px;
+    }
+
+    &__contacts {
+      gap: 16px;
+    }
+
+    &__contact {
+      & svg {
+        width: 24px;
+        height: 24px;
+        fill: currentColor;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    min-height: 220px;
+
+    &__content {
+      margin: 30px auto;
+      min-height: 170px;
+      gap: 50px;
+    }
+
+    &__title {
+      font-size: 16px;
+      line-height: 16px;
+    }
+    &__copyright {
+      font-size: 14px;
+      line-height: 14px;
+    }
+    &__contacts {
+      gap: 12px;
+    }
+
+    &__to-us {
+      font-size: 16px;
+      line-height: 16px;
+    }
+
+    &__contact {
+      gap: 5px;
+
+      & svg {
+        width: 20px;
+        height: 20px;
+        fill: currentColor;
+      }
+
+      &-text {
+        font-size: 16px;
+        line-height: 16px;
+      }
+    }
+
+    &__social-media {
+      gap: 15px;
+    }
+
+    &__link {
+      & svg {
+        width: 20px;
+        height: 20px;
+      }
+    }
   }
 }
