--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,12 +4,20 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 30px 0;
-  z-index: 2;
-  // position: sticky;
-  // top: 0;
+  position: sticky;
+
+  z-index: 20;
+  top: 0;
+  background-color: $mainBGColor;
+  transition: all 0.3s ease-in-out;
+
+  &_scroled {
+    padding: 8px 0;
+    background-color: $tickerBGColor;
+  }
 
   &__content {
     @include blockWidth;
@@ -18,10 +26,9 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
+    margin: 0 20px;
   }
   &__logo {
-    color: $mainTextColor;
     font-size: 30px;
     font-style: normal;
     font-weight: 400;
@@ -29,6 +36,22 @@
     text-transform: uppercase;
     display: flex;
     align-items: center;
+    margin: 0;
+    & svg {
+      fill: currentColor;
+      height: 30px;
+      width: 42px;
+    }
+
+    &-container {
+      color: $titleTextColor;
+      max-height: 30px;
+      display: flex;
+      flex-direction: row;
+      gap: 5px;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 
   &__nav {
@@ -37,7 +60,7 @@
   }
   &__link {
     text-decoration: none;
-    color: $mainTextColor;
+    color: $titleTextColor;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
@@ -45,5 +68,93 @@
     text-transform: uppercase;
     display: flex;
     align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      border-bottom: 1px solid $titleTextColor;
+    }
+  }
+
+  &__burger-menu-btn {
+    border: none;
+    color: $titleTextColor;
+    // font-size: 24px;
+    // line-height: 24px;
+    width: 24px;
+    height: 24px;
+    // font-weight: 700;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    background-color: transparent;
+    & svg {
+      fill: currentColor;
+      width: 24px;
+      height: 24px;
+    }
+    // padding-bottom: 5px;
+    // box-sizing: border-box;
+    &:hover {
+      opacity: 0.6;
+    }
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .header {
+    padding: 20px 10px;
+    box-sizing: border-box;
+
+    &__nav {
+      gap: 15px;
+    }
+
+    &__logo {
+      font-size: 24px;
+      line-height: 24px;
+      & svg {
+        height: 24px;
+        width: 35px;
+      }
+    }
+
+    &__link {
+      font-size: 20px;
+    }
+  }
+}
+@media screen and (max-width: 1100px) {
+  .header {
+    &__nav {
+      gap: 10px;
+    }
+
+    &__logo {
+      font-size: 16px;
+      line-height: 16px;
+      & svg {
+        height: 16px;
+        width: 27px;
+      }
+    }
+
+    &__link {
+      font-size: 16px;
+    }
+  }
+}
+@media screen and (max-width: 500px) {
+  .header {
+    &__nav {
+      gap: 10px;
+    }
+
+    &__logo:nth-of-type(n + 2) {
+      display: none;
+    }
   }
 }
