--- a/src/components/OurProjects/OurProjects.scss
+++ b/src/components/OurProjects/OurProjects.scss
@@ -3,6 +3,7 @@
 .our-projects {
   @include contentWidth;
   margin: 100px auto;
+  overflow:hidden;
 
   &__title {
     @include sectionTitle;
@@ -11,6 +12,24 @@
   &__cards {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 60px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .our-projects {
+    &__cards {
+      gap: 40px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .our-projects {
+    margin: 40px auto;
+
+    &__cards {
+      gap: 30px;
+    }
   }
 }
