--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -15,11 +15,12 @@
 
   &:hover {
     transform: scale(1.05);
+    // box-shadow: 0px 0px 15px 15px  $secondBGColor;
   }
 
   &__img {
-    min-width: 450px;
-    height: 300px;
+    min-width: 200px;
+    min-height: 100px;
     background-size: contain;
   }
 
@@ -27,7 +28,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    color: $footerColor;
+    color: $mainTextColor;
   }
 
   &__title {
@@ -42,5 +43,91 @@
     font-size: 20px;
     line-height: 22px;
     font-weight: normal;
+  }
+}
+
+@media screen and (max-width:1100px) {
+  .card {
+    // display: flex;
+    // flex-direction: row;
+    // width: 100%;
+    // min-height: 300px;
+    // gap: 20px;
+    // cursor: pointer;
+    // transition: transform 0.3s ease-in-out;
+  
+  
+   
+  
+    &__img {
+      // min-width: 450px;
+      // height: 300px;
+      // background-size: contain;
+    }
+  
+    &__text {
+      // display: flex;
+      // flex-direction: column;
+      // gap: 20px;
+      // color: $mainTextColor;
+    }
+  
+    &__title {
+      // margin: 0;
+      font-size: 28px;
+      line-height: 28px;
+      // font-weight: 600;
+    }
+  
+    &__description {
+      // margin: 0;
+      font-size: 18px;
+      line-height: 20px;
+      // font-weight: normal;
+    }
+  }
+}
+
+@media screen and (max-width:768px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    // width: 100%;
+    // min-height: 300px;
+    // gap: 20px;
+    // cursor: pointer;
+    // transition: transform 0.3s ease-in-out;
+  
+    &:nth-of-type(even) {
+      flex-direction: column;
+    }
+   
+  
+    &__img {
+      // min-width: 450px;
+      // height: 300px;
+      // background-size: contain;
+    }
+  
+    &__text {
+      // display: flex;
+      // flex-direction: column;
+      // gap: 20px;
+      // color: $mainTextColor;
+    }
+  
+    &__title {
+      // margin: 0;
+      font-size: 18px;
+      line-height: 18px;
+      // font-weight: 600;
+    }
+  
+    &__description {
+      // margin: 0;
+      font-size: 14px;
+      line-height: 14px;
+      // font-weight: normal;
+    }
   }
 }
