--- a/src/components/Ticker/Ticker.scss
+++ b/src/components/Ticker/Ticker.scss
@@ -9,9 +9,42 @@
   align-items: center;
 
   &__text {
-    color: $footerColor;
+    color: $titleTextColor;
     font-size: 89px;
     line-height: 89px;
     font-weight: normal;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .ticker {
+    height: 160px;
+
+    &__text {
+      font-size: 65px;
+      line-height: 65px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .ticker {
+    height: 100px;
+
+    &__text {
+      font-size: 42px;
+      line-height: 42px;
+    }
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .ticker {
+    height: 60px;
+
+    &__text {
+      font-size: 30px;
+      line-height: 30px;
+    }
   }
 }
