--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -4,7 +4,8 @@
 }
 
 @mixin contentWidth {
-  max-width: 1016px;
+  // max-width: 1016px;
+  max-width: min(1016px, 90%);
   width: 100%;
   margin: 0 auto;
 }
@@ -18,4 +19,24 @@
   color: $titleTextColor;
   margin: 0 auto 20px;
   white-space: wrap;
+  @media screen and (max-width: 1400px) {
+    font-size: 60px;
+    line-height: 60px;
+    letter-spacing: 3px;
+  }
+  @media screen and (max-width: 1100px) {
+    font-size: 50px;
+    line-height: 50px;
+    letter-spacing: 2px;
+  }
+  @media screen and (max-width: 768px) {
+    font-size: 30px;
+    line-height: 30px;
+    letter-spacing: 1px;
+  }
+  @media screen and (max-width: 420px) {
+    font-size: 22px;
+    line-height: 22px;
+    letter-spacing: 0.5px;
+  }
 }
